--- a/package.json
+++ b/package.json
@@ -1,54 +1,57 @@
 {
-    "name": "marleyjs",
-    "version": "0.1.0",
-    "license": "MIT",
-    "angular-cli": {},
-    "engines": {
-        "node": "6.9.2",
-        "npm": "3.10.9"
-    },
-    "scripts": {
-        "ng": "ng",
-        "start": "node server/server.js",
-        "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
-        "test": "ng test",
-        "pree2e": "webdriver-manager update --standalone false --gecko false",
-        "e2e": "protractor",
-        "postinstall": "ng build --aot -prod",
-        "deploy": "git push origin master"
-    },
-    "dependencies": {
-        "@angular/common": "^2.3.1",
-        "@angular/compiler": "^2.3.1",
-        "@angular/core": "^2.3.1",
-        "@angular/forms": "^2.3.1",
-        "@angular/http": "^2.3.1",
-        "@angular/platform-browser": "^2.3.1",
-        "@angular/platform-browser-dynamic": "^2.3.1",
-        "@angular/router": "^3.3.1",
-        "angular-cli": "1.0.0-beta.26",
-        "bulma": "^0.3.1",
-        "core-js": "^2.4.1",
-        "express": "^4.14.1",
-        "rxjs": "^5.0.1",
-        "ts-helpers": "^1.1.1",
-        "zone.js": "^0.7.2"
-    },
-    "devDependencies": {
-        "@angular/compiler-cli": "^2.3.1",
-        "@types/jasmine": "2.5.38",
-        "@types/node": "^6.0.42",
-        "codelyzer": "~2.0.0-beta.1",
-        "jasmine-core": "2.5.2",
-        "jasmine-spec-reporter": "2.5.0",
-        "karma": "1.2.0",
-        "karma-chrome-launcher": "^2.0.0",
-        "karma-cli": "^1.0.1",
-        "karma-jasmine": "^1.0.2",
-        "karma-remap-istanbul": "^0.2.1",
-        "protractor": "~4.0.13",
-        "ts-node": "1.2.1",
-        "tslint": "^4.3.0",
-        "typescript": "~2.0.3"
-    }
+  "name": "marleyjs",
+  "version": "0.1.0",
+  "license": "MIT",
+  "angular-cli": {},
+  "engines": {
+    "node": "6.9.2",
+    "npm": "3.10.9"
+  },
+  "scripts": {
+    "ng": "ng",
+    "start": "node server/server.js",
+    "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
+    "test": "ng test",
+    "pree2e": "webdriver-manager update --standalone false --gecko false",
+    "e2e": "protractor",
+    "postinstall": "ng build --aot -prod",
+    "deploy": "git push origin master"
+  },
+  "dependencies": {
+    "@angular/animations": "^4.0.0-rc.5",
+    "@angular/common": "^4.0.0-rc.5",
+    "@angular/compiler": "^4.0.0-rc.5",
+    "@angular/compiler-cli": "^4.0.0-rc.5",
+    "@angular/core": "^4.0.0-rc.5",
+    "@angular/forms": "^4.0.0-rc.5",
+    "@angular/http": "^4.0.0-rc.5",
+    "@angular/platform-browser": "^4.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "^4.0.0-rc.5",
+    "@angular/platform-server": "^4.0.0-rc.5",
+    "@angular/router": "^4.0.0-rc.5",
+    "angular-cli": "1.0.0-beta.26",
+    "bulma": "^0.3.1",
+    "core-js": "^2.4.1",
+    "express": "^4.14.1",
+    "rxjs": "^5.0.1",
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.8.4"
+  },
+  "devDependencies": {
+    "@angular/compiler-cli": "^2.3.1",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "^6.0.42",
+    "codelyzer": "~2.0.0-beta.1",
+    "jasmine-core": "2.5.2",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-remap-istanbul": "^0.2.1",
+    "protractor": "~4.0.13",
+    "ts-node": "1.2.1",
+    "tslint": "^4.3.0",
+    "typescript": "^2.2.1"
+  }
 }
