--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
         "@angular/platform-browser": "^2.3.1",
         "@angular/platform-browser-dynamic": "^2.3.1",
         "@angular/router": "^3.3.1",
-        "angular-cli": "1.0.0-beta.26",
         "bulma": "^0.3.1",
         "core-js": "^2.4.1",
         "express": "^4.14.1",
@@ -35,6 +34,7 @@
         "zone.js": "^0.7.2"
     },
     "devDependencies": {
+        "@angular/cli": "^1.1.3",
         "@angular/compiler-cli": "^2.3.1",
         "@types/jasmine": "2.5.38",
         "@types/node": "^6.0.42",
