--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "deploy": "git push origin master"
     },
     "dependencies": {
+        "@angular/cli": "^1.1.3",
         "@angular/common": "^2.3.1",
         "@angular/compiler": "^2.3.1",
         "@angular/core": "^2.3.1",
