--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "test": "ng test",
         "pree2e": "webdriver-manager update --standalone false --gecko false",
         "e2e": "protractor",
-        "postinstall": "ng build --aot -prod",
+        "postinstall": "npm cache clean && ng build --aot -prod",
         "deploy": "git push origin master"
     },
     "dependencies": {
