--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "test": "ng test",
         "pree2e": "webdriver-manager update --standalone false --gecko false",
         "e2e": "protractor",
-        "deploy": "git push origin master"
+        "deploy": "git push origin master",
+        "build": "ng build --aot && rollup --config ./config/rollup-inline.config.js && rollup --config ./config/rollup-main.config.js && rollup --config ./config/rollup-styles.config.js && rollup --config ./config/rollup-vendor.config.js"
     },
     "dependencies": {
         "@angular/common": "^4.0.2",
@@ -46,6 +47,12 @@
         "karma-jasmine": "^1.0.2",
         "karma-remap-istanbul": "^0.2.1",
         "protractor": "~4.0.13",
+        "rollup": "^0.43.0",
+        "rollup-plugin-commonjs": "^8.0.2",
+        "rollup-plugin-multi-entry": "^2.0.1",
+        "rollup-plugin-node-globals": "^1.1.0",
+        "rollup-plugin-node-resolve": "^3.0.0",
+        "rollup-plugin-uglify": "^2.0.1",
         "ts-node": "1.2.1",
         "tslint": "^4.3.0",
         "typescript": "~2.0.3"
