--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
         "@angular/compiler-cli": "^4.0.2",
         "@types/jasmine": "2.5.38",
         "@types/node": "^6.0.42",
+        "babel-plugin-external-helpers": "^6.22.0",
+        "babel-preset-es2015": "^6.24.1",
         "codelyzer": "~2.0.0-beta.1",
         "jasmine-core": "2.5.2",
         "jasmine-spec-reporter": "2.5.0",
@@ -48,6 +50,7 @@
         "karma-remap-istanbul": "^0.2.1",
         "protractor": "~4.0.13",
         "rollup": "^0.43.0",
+        "rollup-plugin-babel": "^2.7.1",
         "rollup-plugin-commonjs": "^8.0.2",
         "rollup-plugin-multi-entry": "^2.0.1",
         "rollup-plugin-node-globals": "^1.1.0",
