--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "marleyjs",
-    "version": "0.2.0",
+    "name": "marley-client",
+    "version": "0.3.1",
     "license": "MIT",
     "angular-cli": {},
     "engines": {
