--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,74 @@
 .build
 .DS_Store
 
-/app/.next
-app/.next
-/app/node_modules
-app/node_modules
+# Client
 
-microservice/.bundle
-/microservice/.bundle
-microservice/config/database.yml
-/microservice/config/database.yml
-/microservice/Gemfile.lock
-microservice/Gemfile.lock
+# compiled output
+/tmp
+
+# dependencies
+client/node_modules
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage/*
+/libpeerconnection.log
+client/npm-debug.log
+testem.log
+client/typings
+
+# e2e
+client/e2e/*.js
+client/e2e/*.map
+
+#System Files
+.DS_Store
+Thumbs.db
+
+# Node #
+client/npm-debug.log
+client/npm-debug.log.*
+
+# Webpack #
+client/webpack.records.json
+
+# Build #
+client/dist
+
+
+
+# API
+
+# App artifacts
+api/_build
+api/db
+api/deps
+api/*.ez
+
+# Generated on crash by the VM
+api/erl_crash.dump
+
+# The config/prod.secret.exs file by default contains sensitive
+# data and you should not commit it into version control.
+#
+# Alternatively, you may comment the line below and commit the
+# secrets file as long as you replace its contents by environment
+# variables.
+
+
