--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,15 +1,16 @@
+# App artifacts
+/_build
+/db
+/deps
+/*.ez
 
-# Created by https://www.gitignore.io/api/vapor
+# Generated on crash by the VM
+erl_crash.dump
 
-### Vapor ###
-Config/secrets
-
-### Vapor Patch ###
-Packages
-.build
-xcuserdata
-*.xcodeproj
-DerivedData/
-.DS_Store
-
-# End of https://www.gitignore.io/api/vapor
+# The config/prod.secret.exs file by default contains sensitive
+# data and you should not commit it into version control.
+#
+# Alternatively, you may comment the line below and commit the
+# secrets file as long as you replace its contents by environment
+# variables.
+/config/prod.secret.exs
