--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "pree2e": "webdriver-manager update --standalone false --gecko false",
         "e2e": "protractor",
         "build": "npm run prefixcss && ng build --aot && rollup --config ./config/rollup-inline.config.js && rollup --config ./config/rollup-main.config.js && rollup --config ./config/rollup-styles.config.js && rollup --config ./config/rollup-vendor.config.js",
-        "start": "node server/index.js"
+        "start": "node server.js"
     },
     "dependencies": {
         "@angular/common": "^4.0.2",
