--- a/package.json
+++ b/package.json
@@ -1,70 +1,111 @@
 {
-    "name": "marley",
-    "version": "0.3.5",
-    "license": "MIT",
-    "angular-cli": {},
-    "engines": {
-        "node": "8.1.4",
-        "npm": "5.0.3"
-    },
-    "scripts": {
-        "ng": "ng",
-        "prefixcss": "postcss -s postcss-scss -u autoprefixer --autoprefixer.browsers \"last 2 versions\" -r src/**/*.scss",
-        "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
-        "test": "ng test",
-        "pree2e": "webdriver-manager update --standalone false --gecko false",
-        "e2e": "protractor",
-        "build": "npm run prefixcss && ng build --aot && rollup --config ./config/rollup-inline.config.js && rollup --config ./config/rollup-main.config.js && rollup --config ./config/rollup-styles.config.js && rollup --config ./config/rollup-vendor.config.js",
-        "start": "node server.js"
-    },
-    "dependencies": {
-        "@angular/common": "^4.0.2",
-        "@angular/compiler": "^4.0.2",
-        "@angular/core": "^4.0.2",
-        "@angular/forms": "^4.0.2",
-        "@angular/http": "^4.0.2",
-        "@angular/platform-browser": "^4.0.2",
-        "@angular/platform-browser-dynamic": "^4.0.2",
-        "@angular/router": "^3.3.1",
-        "bulma": "^0.3.1",
-        "core-js": "^2.4.1",
-        "koa": "^2.3.0",
-        "koa-bodyparser": "^4.2.0",
-        "koa-router": "^7.2.1",
-        "koa-static": "^4.0.1",
-        "rxjs": "^5.0.1",
-        "ts-helpers": "^1.1.1",
-        "zone.js": "^0.7.2"
-    },
-    "devDependencies": {
-        "@angular/cli": "^1.1.3",
-        "@angular/compiler-cli": "^4.0.2",
-        "@types/jasmine": "2.5.38",
-        "@types/node": "^6.0.42",
-        "autoprefixer": "^7.1.2",
-        "babel-plugin-external-helpers": "^6.22.0",
-        "babel-preset-es2015": "^6.24.1",
-        "codelyzer": "~2.0.0-beta.1",
-        "jasmine-core": "2.5.2",
-        "jasmine-spec-reporter": "2.5.0",
-        "karma": "1.2.0",
-        "karma-chrome-launcher": "^2.0.0",
-        "karma-cli": "^1.0.1",
-        "karma-jasmine": "^1.0.2",
-        "karma-remap-istanbul": "^0.2.1",
-        "postcss": "^6.0.9",
-        "postcss-cli": "^4.1.0",
-        "postcss-scss": "^1.0.2",
-        "protractor": "~4.0.13",
-        "rollup": "^0.43.0",
-        "rollup-plugin-babel": "^2.7.1",
-        "rollup-plugin-commonjs": "^8.0.2",
-        "rollup-plugin-multi-entry": "^2.0.1",
-        "rollup-plugin-node-globals": "^1.1.0",
-        "rollup-plugin-node-resolve": "^3.0.0",
-        "rollup-plugin-uglify": "^2.0.1",
-        "ts-node": "1.2.1",
-        "tslint": "^4.3.0",
-        "typescript": "~2.0.3"
-    }
+  "name": "marley",
+  "version": "0.4.0",
+  "license": "MIT",
+  "angular-cli": {},
+  "engines": {
+    "node": "8.1.4",
+    "npm": "5.0.3"
+  },
+  "scripts": {
+    "ng": "ng",
+    "prefixcss": "postcss -s postcss-scss -u autoprefixer --autoprefixer.browsers \"last 2 versions\" -r src/**/*.scss",
+    "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
+    "test": "karma start ./karma.conf.js",
+    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
+    "e2e": "protractor ./protractor.conf.js",
+    "build": "webpack",
+    "start": "webpack-dev-server --port=4200"
+  },
+  "dependencies": {
+    "@angular/common": "^4.0.2",
+    "@angular/compiler": "^4.0.2",
+    "@angular/core": "^4.0.2",
+    "@angular/forms": "^4.0.2",
+    "@angular/http": "^4.0.2",
+    "@angular/platform-browser": "^4.0.2",
+    "@angular/platform-browser-dynamic": "^4.0.2",
+    "@angular/router": "^3.3.1",
+    "acorn-dynamic-import": "^2.0.2",
+    "ansi-html": "0.0.7",
+    "bulma": "^0.3.1",
+    "compression": "^1.7.0",
+    "connect-history-api-fallback": "^1.3.0",
+    "core-js": "^2.4.1",
+    "css-selector-tokenizer": "^0.7.0",
+    "enhanced-resolve": "^3.4.1",
+    "express": "^4.15.4",
+    "html-entities": "^1.2.1",
+    "http-proxy-middleware": "^0.17.4",
+    "icss-utils": "^3.0.1",
+    "interpret": "^1.0.4",
+    "koa": "^2.3.0",
+    "koa-bodyparser": "^4.2.0",
+    "koa-router": "^7.2.1",
+    "koa-static": "^4.0.1",
+    "loader-runner": "^2.3.0",
+    "lodash.camelcase": "^4.3.0",
+    "node-libs-browser": "^2.0.0",
+    "postcss-modules-extract-imports": "^1.1.0",
+    "postcss-modules-local-by-default": "^1.2.0",
+    "postcss-modules-scope": "^1.1.0",
+    "postcss-modules-values": "^1.3.0",
+    "rxjs": "^5.0.1",
+    "serve-index": "^1.9.0",
+    "sockjs": "^0.3.18",
+    "spdy": "^3.4.7",
+    "tapable": "^0.2.8",
+    "ts-helpers": "^1.1.1",
+    "url-parse": "^1.1.9",
+    "zone.js": "^0.7.2"
+  },
+  "devDependencies": {
+    "@angular/cli": "^1.1.3",
+    "@angular/compiler-cli": "^4.0.2",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "^6.0.42",
+    "autoprefixer": "^6.5.3",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
+    "codelyzer": "~2.0.0-beta.1",
+    "jasmine-core": "2.5.2",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-remap-istanbul": "^0.2.1",
+    "postcss": "^6.0.9",
+    "postcss-cli": "^4.1.0",
+    "postcss-scss": "^1.0.2",
+    "protractor": "~4.0.13",
+    "rollup": "^0.43.0",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-multi-entry": "^2.0.1",
+    "rollup-plugin-node-globals": "^1.1.0",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-uglify": "^2.0.1",
+    "ts-node": "1.2.1",
+    "tslint": "^4.3.0",
+    "typescript": "~2.0.3",
+    "webpack-dev-server": "~2.4.5",
+    "webpack": "~2.4.0",
+    "css-loader": "^0.28.1",
+    "cssnano": "^3.10.0",
+    "exports-loader": "^0.6.3",
+    "file-loader": "^0.10.0",
+    "json-loader": "^0.5.4",
+    "less-loader": "^4.0.2",
+    "postcss-loader": "^1.3.3",
+    "postcss-url": "^5.1.2",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.3",
+    "script-loader": "^0.7.0",
+    "source-map-loader": "^0.2.0",
+    "istanbul-instrumenter-loader": "^2.0.0",
+    "style-loader": "^0.13.1",
+    "stylus-loader": "^3.0.1",
+    "url-loader": "^0.5.7"
+  }
 }
