--- a/package.json
+++ b/package.json
@@ -9,28 +9,28 @@
   },
   "scripts": {
     "ng": "ng",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
     "prefixcss": "postcss -s postcss-scss -u autoprefixer --autoprefixer.browsers \"last 2 versions\" -r src/**/*.scss",
-    "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
-    "test": "karma start ./config/karma.conf.js",
     "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
-    "e2e": "protractor ./config/protractor.conf.js",
-    "build:dev": "webpack --config ./config/webpack.config.js",
-    "build:prod": "npm run prefixcss && npm run build:dev && rollup --config ./config/rollup-inline.config.js && rollup --config ./config/rollup-main.config.js && rollup --config ./config/rollup-styles.config.js && rollup --config ./config/rollup-vendor.config.js",
-    "dev": "webpack-dev-server --config ./config/webpack.config.js --port=4200",
+    "build:dev": "ng build",
+    "build:prod": "npm run prefixcss && ng build --aot-prod && rollup --config ./config/rollup-inline.config.js && rollup --config ./config/rollup-main.config.js && rollup --config ./config/rollup-styles.config.js && rollup --config ./config/rollup-vendor.config.js",
+    "dev": "ng serve",
     "start": "node ./server/app.js"
   },
   "dependencies": {
-    "@angular/common": "^4.0.2",
-    "@angular/compiler": "^4.0.2",
-    "@angular/core": "^4.0.2",
-    "@angular/forms": "^4.0.2",
-    "@angular/http": "^4.0.2",
-    "@angular/platform-browser": "^4.0.2",
-    "@angular/platform-browser-dynamic": "^4.0.2",
-    "@angular/router": "^3.3.1",
+    "@angular/common": "^5.0.0-beta.7",
+    "@angular/compiler": "^5.0.0-beta.7",
+    "@angular/core": "^5.0.0-beta.7",
+    "@angular/forms": "^5.0.0-beta.7",
+    "@angular/http": "^5.0.0-beta.7",
+    "@angular/platform-browser": "^5.0.0-beta.7",
+    "@angular/platform-browser-dynamic": "^5.0.0-beta.7",
+    "@angular/router": "^3.4.10",
     "acorn-dynamic-import": "^2.0.2",
     "ansi-html": "0.0.7",
-    "bulma": "^0.5.2",
+    "bulma": "^0.5.3",
     "compression": "^1.7.0",
     "connect-history-api-fallback": "^1.3.0",
     "core-js": "^2.4.1",
@@ -62,25 +62,35 @@
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@angular/cli": "^1.1.3",
-    "@angular/compiler-cli": "^4.0.2",
+    "@angular/cli": "^1.5.0-beta.1",
+    "@angular/compiler-cli": "^5.0.0-beta.7",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
     "autoprefixer": "^6.5.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "codelyzer": "~2.0.0-beta.1",
+    "css-loader": "^0.28.1",
+    "cssnano": "^3.10.0",
+    "exports-loader": "^0.6.3",
+    "file-loader": "^0.10.0",
+    "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
+    "json-loader": "^0.5.4",
     "karma": "1.2.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
+    "less-loader": "^4.0.2",
     "postcss": "^6.0.9",
     "postcss-cli": "^4.1.0",
+    "postcss-loader": "^1.3.3",
     "postcss-scss": "^1.0.2",
+    "postcss-url": "^5.1.2",
     "protractor": "~4.0.13",
+    "raw-loader": "^0.5.1",
     "rollup": "^0.43.0",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
@@ -88,26 +98,16 @@
     "rollup-plugin-node-globals": "^1.1.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-uglify": "^2.0.1",
-    "ts-node": "1.2.1",
-    "tslint": "^4.3.0",
-    "typescript": "~2.0.3",
-    "webpack-dev-server": "~2.4.5",
-    "webpack": "~2.4.0",
-    "css-loader": "^0.28.1",
-    "cssnano": "^3.10.0",
-    "exports-loader": "^0.6.3",
-    "file-loader": "^0.10.0",
-    "json-loader": "^0.5.4",
-    "less-loader": "^4.0.2",
-    "postcss-loader": "^1.3.3",
-    "postcss-url": "^5.1.2",
-    "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.3",
     "script-loader": "^0.7.0",
     "source-map-loader": "^0.2.0",
-    "istanbul-instrumenter-loader": "^2.0.0",
     "style-loader": "^0.13.1",
     "stylus-loader": "^3.0.1",
-    "url-loader": "^0.5.7"
+    "ts-node": "1.2.1",
+    "tslint": "^4.3.0",
+    "typescript": "^2.6.0-dev.20170923",
+    "url-loader": "^0.5.7",
+    "webpack": "~2.4.0",
+    "webpack-dev-server": "~2.4.5"
   }
 }
