--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marley",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "license": "MIT",
   "angular-cli": {},
   "engines": {
@@ -12,10 +12,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "prefixcss": "postcss -s postcss-scss -u autoprefixer --autoprefixer.browsers \"last 2 versions\" -r src/**/*.scss",
     "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
     "build:dev": "ng build",
-    "build:prod": "npm run prefixcss && ng build --aot -prod && rollup --config ./config/rollup-inline.config.js && rollup --config ./config/rollup-main.config.js && rollup --config ./config/rollup-styles.config.js && rollup --config ./config/rollup-vendor.config.js",
+    "build:prod": "ng build --env=prod && rollup --config ./config/rollup-inline.config.js && rollup --config ./config/rollup-main.config.js && rollup --config ./config/rollup-styles.config.js && rollup --config ./config/rollup-vendor.config.js",
     "dev": "ng serve",
     "start": "node ./server/app.js"
   },
@@ -91,9 +90,9 @@
     "postcss-url": "^5.1.2",
     "protractor": "~4.0.13",
     "raw-loader": "^0.5.1",
-    "rollup": "^0.43.0",
+    "rollup": "^0.43.1",
     "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-commonjs": "^8.2.1",
     "rollup-plugin-multi-entry": "^2.0.1",
     "rollup-plugin-node-globals": "^1.1.0",
     "rollup-plugin-node-resolve": "^3.0.0",
