--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "webpack-dashboard": "webpack-dashboard -- node app.js",
     "analyzer": "npm run build:prod && node --max_old_space_size=8192 ./node_modules/webpack/bin/webpack.js --config ./tools/analyzer.js",
     "rollup": "rollup --config ./config/rollup-inline.config.js && rollup --config ./config/rollup-main.config.js && rollup --config ./config/rollup-styles.config.js && rollup --config ./config/rollup-vendor.config.js && rollup --config ./config/rollup-polyfills.config.js",
+    "build": "ng build --env=prod --build-optimizer=true",
     "build:dev": "ng build",
-    "build:prod": "ng build --env=prod --build-optimizer=true && npm run rollup",
+    "build:prod": "npm run build && npm run rollup",
     "build:desktop": "node --max_old_space_size=8192 ./node_modules/webpack/bin/webpack.js --config ./config/desktop.config.js",
     "package": "electron-packager ./desktop \"Spaceti Superadmin\" --platform=darwin --arch=x64 --version=2.0.0 --prune=true --app-copyright=\"Copyright (c) Spaceti.\" --icon=assets/icon.png --out=./desktop/releases/mac --overwrite",
     "package:linux": "electron-packager ./desktop \"Spaceti Superadmin\" --platform=linux --arch=x64 --version=2.0.0 --prune=true --app-copyright=\"Copyright (c) Spaceti.\" --icon=assets/icon.png --out=./desktop/releases/linux --overwrite",
@@ -25,7 +26,7 @@
     "package:windows:x64": "electron-packager ./desktop \"Spaceti Superadmin\" --platform=win32 --arch=x64 --version=2.0.0 --prune=true --app-copyright=\"Copyright (c) Spaceti.\" --icon=assets/icon.png --out=./desktop/releases/windows --overwrite --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Spaceti Superadmin\"",
     "serve": "ng serve",
     "serve:dev": "npm run build:dev && npm start",
-    "serve:prod": "npm run build:prod && npm run rollup && npm start",
+    "serve:prod": "npm run build:prod && npm start",
     "serve:electron": "NODE_ENV=development electron main",
     "start": "node ./server/app.js"
   },
