--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,8 @@ Thumbs.db
 
 # Desktop Builds
 desktop/releases
+desktop/dist/inline.bundle.js
+desktop/dist/main.bundle.js
+desktop/dist/polyfills.bundle.js
+desktop/dist/styles.bundle.js
+desktop/dist/vendor.bundle.js
