--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "ng": "ng",
-    "lint": "tslint . --config ./config/tslint.json",
+    "lint": "ng lint",
     "test": "ng test",
     "e2e": "ng e2e",
     "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
