--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marley",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "license": "MIT",
   "angular-cli": {},
   "engines": {
@@ -15,8 +15,8 @@
     "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
     "webpack-dashboard": "webpack-dashboard -- node app.js",
     "analyzer": "npm run build:prod && node --max_old_space_size=8192 ./node_modules/webpack/bin/webpack.js --config ./tools/analyzer.js",
-    "rollup": "rollup --config ./config/inline.config.js && rollup --config ./config/main.config.js && rollup --config ./config/styles.config.js && rollup --config ./config/vendor.config.js && rollup --config ./config/polyfills.config.js",
-    "build": "ng build --env=prod --build-optimizer=true",
+    "rollup": "rollup --config ./config/inline.config.js && rollup --config ./config/main.config.js && rollup --config ./config/styles.config.js && rollup --config ./config/polyfills.config.js",
+    "build": "ng build --env=prod --build-optimizer=true --aot",
     "build:dev": "ng build",
     "build:prod": "npm run build && npm run rollup",
     "build:desktop": "node --max_old_space_size=8192 ./node_modules/webpack/bin/webpack.js --config ./config/desktop.config.js",
@@ -31,14 +31,14 @@
     "start": "node ./server/app.js"
   },
   "dependencies": {
-    "@angular/common": "^5.0.0-beta.7",
-    "@angular/compiler": "^5.0.0-beta.7",
-    "@angular/core": "^5.0.0-beta.7",
-    "@angular/forms": "^5.0.0-beta.7",
-    "@angular/http": "^5.0.0-beta.7",
-    "@angular/platform-browser": "^5.0.0-beta.7",
-    "@angular/platform-browser-dynamic": "^5.0.0-beta.7",
-    "@angular/router": "^3.4.10",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "acorn-dynamic-import": "^2.0.2",
     "ansi-html": "0.0.7",
     "bulma": "^0.5.3",
@@ -73,8 +73,8 @@
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.0-beta.1",
-    "@angular/compiler-cli": "^5.0.0-beta.7",
+    "@angular/cli": "^1.5.0",
+    "@angular/compiler-cli": "^5.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
     "autoprefixer": "^6.5.3",
@@ -120,7 +120,7 @@
     "stylus-loader": "^3.0.1",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
-    "typescript": "^2.6.0-dev.20170923",
+    "typescript": "^2.5.0",
     "url-loader": "^0.5.7",
     "webpack": "~2.4.0",
     "webpack-bundle-analyzer": "^2.9.0",
