--- a/package.json
+++ b/package.json
@@ -1,108 +1,58 @@
 {
-  "name": "marley",
-  "version": "0.6.3",
-  "license": "MIT",
-  "angular-cli": {},
+  "name": "marleyapp",
+  "version": "0.7.0",
   "engines": {
-    "node": "8.1.4",
-    "npm": "5.0.3"
+    "node": ">=8.9.0",
+    "npm": ">05.0.3"
   },
   "scripts": {
     "ng": "ng",
     "lint": "ng lint",
     "test": "ng test",
     "e2e": "ng e2e",
-    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
-    "analyzer": "ng build --prod --stats-json && webpack-bundle-analyzer dist/stats.json",
-    "build": "ng build --env=prod --build-optimizer=true --aot",
     "build:dev": "ng build",
-    "build:prod": "ng build --target production --aot --build-optimizer --vendor-chunk",
+    "build:prod": "ng lint && ng build --prod",
     "serve": "ng serve",
     "serve:prod": "npm run build:prod && npm start",
-    "start": "node ./server/app.js"
+    "start": "node ./server/server.js"
   },
+  "private": true,
   "dependencies": {
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "acorn-dynamic-import": "^2.0.2",
-    "ansi-html": "0.0.7",
-    "bulma": "^0.5.3",
-    "compression": "^1.7.0",
-    "connect-history-api-fallback": "^1.3.0",
-    "core-js": "^2.4.1",
-    "css-selector-tokenizer": "^0.7.0",
-    "enhanced-resolve": "^3.4.1",
-    "express": "^4.15.4",
-    "html-entities": "^1.2.1",
-    "http-proxy-middleware": "^0.17.4",
-    "icss-utils": "^3.0.1",
-    "interpret": "^1.0.4",
-    "koa": "^2.3.0",
-    "koa-bodyparser": "^4.2.0",
-    "koa-router": "^7.2.1",
-    "koa-static": "^4.0.1",
-    "loader-runner": "^2.3.0",
-    "lodash.camelcase": "^4.3.0",
-    "node-libs-browser": "^2.0.0",
-    "postcss-modules-extract-imports": "^1.1.0",
-    "postcss-modules-local-by-default": "^1.2.0",
-    "postcss-modules-scope": "^1.1.0",
-    "postcss-modules-values": "^1.3.0",
-    "rxjs": "^5.0.1",
-    "serve-index": "^1.9.0",
-    "sockjs": "^0.3.18",
-    "spdy": "^3.4.7",
-    "tapable": "^0.2.8",
-    "ts-helpers": "^1.1.1",
-    "url-parse": "^1.1.9",
-    "zone.js": "^0.7.2"
+    "@angular/animations": "^6.0.3",
+    "@angular/common": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/core": "^6.0.3",
+    "@angular/forms": "^6.0.3",
+    "@angular/http": "^6.0.3",
+    "@angular/platform-browser": "^6.0.3",
+    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/router": "^6.0.3",
+    "bulma": "^0.7.1",
+    "core-js": "^2.5.4",
+    "express": "^4.16.3",
+    "rxjs": "^6.0.0",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.1",
-    "@angular/compiler-cli": "^5.0.0",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
-    "autoprefixer": "^6.5.3",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
-    "codelyzer": "~2.0.0-beta.1",
-    "css-loader": "^0.28.1",
-    "cssnano": "^3.10.0",
-    "exports-loader": "^0.6.3",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^0.10.0",
-    "istanbul-instrumenter-loader": "^2.0.0",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
-    "json-loader": "^0.5.4",
-    "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "less-loader": "^4.0.2",
-    "postcss": "^6.0.9",
-    "postcss-cli": "^4.1.0",
-    "postcss-loader": "^1.3.3",
-    "postcss-scss": "^1.0.2",
-    "postcss-url": "^5.1.2",
-    "protractor": "~4.0.13",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^6.0.3",
-    "script-loader": "^0.7.0",
-    "source-map-loader": "^0.2.0",
-    "style-loader": "^0.13.1",
-    "stylus-loader": "^3.0.1",
-    "ts-node": "1.2.1",
-    "tslint": "^4.3.0",
-    "typescript": "^2.4.2",
-    "url-loader": "^0.5.7",
-    "webpack-bundle-analyzer": "^2.11.1"
+    "@angular-devkit/build-angular": "^0.6.5",
+    "@angular/cli": "~6.0.5",
+    "@angular/compiler-cli": "^6.0.3",
+    "@angular/language-service": "^6.0.3",
+    "@types/jasmine": "~2.8.6",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.2.1",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~1.7.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~1.4.2",
+    "karma-jasmine": "~1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.3.0",
+    "sass-lint": "^1.12.1",
+    "ts-node": "~5.0.1",
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
