--- a/package.json
+++ b/package.json
@@ -1,47 +1,56 @@
 {
   "name": "marleyapp",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "engines": {
     "node": ">=8.9.0",
     "npm": ">05.0.3"
   },
+  "private": true,
+  "repository": {},
+  "description": "Mini Starter Kit for complex web apps.",
   "scripts": {
     "ng": "ng",
-    "lint": "ng lint",
     "test": "ng test",
+    "lint": "tslint ./src/**/*.ts -t verbose",
     "e2e": "ng e2e",
+    "setup-project": "yarn install && yarn build:ssr && yarn start",
+    "build:ssr": "yarn build:client-and-server && yarn webpack:server",
+    "build:client-and-server": "yarn build:prod && ng run angular.io-example:server",
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
     "build:dev": "ng build",
-    "build:prod": "ng lint && ng build --prod",
+    "build:prod": "ng build --prod",
     "serve": "ng serve",
-    "serve:prod": "npm run build:prod && npm start",
-    "start": "node ./server/server.js"
+    "start": "node dist/server.js"
   },
-  "private": true,
+  "author": "Petr Nikolas",
+  "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^6.0.3",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
+    "@angular/animations": "^6.0.0",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/http": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular/router": "^6.0.0",
+    "@angular/upgrade": "^6.0.0",
+    "@nguniversal/express-engine": "^6.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
+    "angular-in-memory-web-api": "^0.6.0",
     "bulma": "^0.7.1",
     "core-js": "^2.5.4",
-    "express": "^4.16.3",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.24"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.6.5",
-    "@angular/cli": "~6.0.5",
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular/language-service": "^6.0.3",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
+    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular/cli": "^6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular/platform-server": "^6.0.0",
+    "@types/jasmine": "~2.8.0",
+    "@types/jasminewd2": "^2.0.3",
+    "@types/node": "^6.0.45",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
@@ -49,10 +58,14 @@
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "lodash": "^4.16.2",
+    "phantomjs-prebuilt": "^2.1.7",
     "protractor": "~5.3.0",
-    "sass-lint": "^1.12.1",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "ts-loader": "^4.2.0",
+    "ts-node": "^5.0.1",
+    "tslint": "^5.9.1",
+    "typescript": "2.7.2",
+    "webpack-cli": "^2.0.14"
   }
 }
