--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "lint": "tslint ./src/**/*.ts -t verbose",
     "e2e": "ng e2e",
     "setup-project": "yarn install && yarn build:ssr && yarn start",
-    "build:ssr": "yarn build:client-and-server && yarn webpack:server",
     "build:client-and-server": "yarn build:prod && ng run angular.io-example:server",
     "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
+    "build:ssr": "yarn build:client-and-server && yarn webpack:server",
     "build:dev": "ng build",
     "build:prod": "ng build --prod",
     "serve": "ng serve",
@@ -62,6 +62,7 @@
     "lodash": "^4.16.2",
     "phantomjs-prebuilt": "^2.1.7",
     "protractor": "~5.3.0",
+    "sass-lint": "^1.12.1",
     "ts-loader": "^4.2.0",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
