--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "marleyapp",
-  "version": "0.7.1",
+  "name": "marleyjs",
+  "version": "0.7.2",
   "engines": {
     "node": ">=8.9.0",
     "npm": ">05.0.3"
@@ -12,11 +12,14 @@
     "ng": "ng",
     "test": "ng test",
     "lint": "tslint ./src/**/*.ts -t verbose",
+    "lint:styles": "stylelint ./src/**/*.scss",
+    "lint:ci": "yarn lint:styles && yarn lint",
+    "prettier": "prettier {src,e2e}/*.ts --write && prettier {src,e2e}/**/*.ts --write",
     "e2e": "ng e2e",
-    "setup-project": "yarn install && yarn build:ssr && yarn start",
-    "build:client-and-server": "yarn build:prod && ng run angular.io-example:server",
+    "setup:project": "yarn install && yarn build:ssr && yarn start",
+    "build:client:server": "yarn lint:styles && yarn prettier && yarn build:prod && ng run angular.io-example:server",
     "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
-    "build:ssr": "yarn build:client-and-server && yarn webpack:server",
+    "build:ssr": "yarn build:client:server && yarn webpack:server",
     "build:dev": "ng build",
     "build:prod": "ng build --prod",
     "serve": "ng serve",
@@ -61,8 +64,11 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "lodash": "^4.16.2",
     "phantomjs-prebuilt": "^2.1.7",
+    "prettier": "^1.13.7",
     "protractor": "~5.3.0",
     "sass-lint": "^1.12.1",
+    "stylelint": "^9.4.0",
+    "stylelint-config-css-modules": "^1.3.0",
     "ts-loader": "^4.2.0",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
