--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "marleyjs",
   "version": "0.7.4",
   "engines": {
-    "node": ">=8.9.0",
-    "npm": ">05.0.3"
+    "node": ">=8.11.2",
+    "npm": ">=5.6.0"
   },
   "private": true,
   "repository": {},
