--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marleyjs",
-  "version": "0.7.5",
+  "version": "0.7.6",
   "engines": {
     "node": ">=8.11.2",
     "npm": ">=5.6.0"
@@ -26,12 +26,23 @@
     "compodoc:serve": "./node_modules/.bin/compodoc -p src/tsconfig.app.json -s -n \"Marley.js documentation\" -w -o --theme \"postmark\"",
     "build:client:server": "yarn lint:styles && yarn prettier && yarn build:prod && ng run angular.io-example:server",
     "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
-    "build:ssr": "yarn build:client:server && yarn webpack:server && node version.js",
+    "build:ssr": "yarn lint:ci && yarn build:client:server && yarn webpack:server && node version.js",
     "build:dev": "ng build",
     "build:prod": "ng build --prod",
     "serve": "ng serve",
-    "serve:proxy": "ng serve --proxy-config proxy.conf.json", 
-    "start": "node dist/server.js"
+    "serve:proxy": "ng serve --proxy-config proxy.conf.json",
+    "start": "node dist/server.js",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "{src,e2e}/**/*.{ts,tsx}": [
+      "yarn lint:ci",
+      "yarn prettier",
+      "yarn e2e",
+      "yarn e2e:ci",
+      "yarn test:ci",
+      "git add"
+    ]
   },
   "author": "Petr Nikolas",
   "license": "MIT",
@@ -65,6 +76,7 @@
     "@types/jasmine": "~2.8.0",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^6.0.45",
+    "codelyzer": "^4.4.4",
     "conventional-changelog-cli": "^2.0.1",
     "describe": "^1.2.0",
     "jasmine-core": "~2.99.1",
@@ -80,6 +92,7 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
+    "lint-staged": "^7.3.0",
     "lodash": "^4.16.2",
     "phantomjs-prebuilt": "^2.1.7",
     "prettier": "^1.13.7",
