update package scripts

--- a/package.json
+++ b/package.json
@@ -3,40 +3,33 @@
   "version": "0.8.0",
   "scripts": {
     "ng": "ng",
-    "start": "node dist/server.js",
+    "start": "ng serve",
     "build": "ng build",
-    "test": "jest --watch",
-    "lint": "tslint -c tslint.json 'src/**/*.ts'",
+    "test": "ng test",
     "e2e": "ng e2e",
-    "affected:apps": "./node_modules/.bin/nx affected:apps",
-    "affected:libs": "./node_modules/.bin/nx affected:libs",
-    "affected:build": "./node_modules/.bin/nx affected:build",
-    "affected:e2e": "./node_modules/.bin/nx affected:e2e",
-    "affected:test": "./node_modules/.bin/nx affected:test",
-    "affected:lint": "./node_modules/.bin/nx affected:lint",
-    "affected:dep-graph": "./node_modules/.bin/nx affected:dep-graph",
-    "format": "./node_modules/.bin/nx format:write",
-    "format:write": "./node_modules/.bin/nx format:write",
-    "format:check": "./node_modules/.bin/nx format:check",
+    "lint": "./node_modules/.bin/nx lint && ng lint",
+    "nx:affected:apps": "./node_modules/.bin/nx affected:apps",
+    "nx:affected:libs": "./node_modules/.bin/nx affected:libs",
+    "nx:affected:build": "./node_modules/.bin/nx affected:build",
+    "nx:affected:e2e": "./node_modules/.bin/nx affected:e2e",
+    "nx:affected:test": "./node_modules/.bin/nx affected:test",
+    "nx:affected:lint": "./node_modules/.bin/nx affected:lint",
+    "nx:affected:dep-graph": "./node_modules/.bin/nx affected:dep-graph",
+    "nx:format": "./node_modules/.bin/nx format:write",
+    "nx:format:write": "./node_modules/.bin/nx format:write",
+    "nx:format:check": "./node_modules/.bin/nx format:check",
+    "nx:workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
+    "nx:dep-graph": "./node_modules/.bin/nx dep-graph",
+    "nx:help": "./node_modules/.bin/nx help",
     "update": "ng update @nrwl/schematics",
     "update:check": "ng update",
-    "workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
-    "dep-graph": "./node_modules/.bin/nx dep-graph",
-    "help": "./node_modules/.bin/nx help",
-    "lint:styles": "stylelint ./src/**/*.scss",
-    "lint:ci": "yarn lint:styles && yarn lint",
+    "stylelint": "stylelint ./apps/**/*.scss",
+    "lint:ci": "npm run stylelint && npm run lint",
     "conventional-changelog": "conventional-changelog",
-    "e2e:ci": "testcafe all e2e/**/*.e2e-spec.ts --app 'yarn start' --app-init-delay 5000",
-    "test:ci": "jest --runInBand",
-    "test:coverage": "rimraf coverage && jest --coverage",
-    "analyzer": "ng build --prod --stats-json && webpack-bundle-analyzer dist/stats.json",
-    "prettier": "prettier --config '. prettierrc.json' --write 'src/*.ts' --write 'src/**/*.ts'",
-    "setup:project": "yarn install && yarn build:ssr && yarn start",
-    "compodoc": "./node_modules/.bin/compodoc -p src/tsconfig.app.json -n \"Marley.js documentation\" -w -o --theme \"postmark\"",
-    "compodoc:serve": "./node_modules/.bin/compodoc -p src/tsconfig.app.json -s -n \"Marley.js documentation\" -w -o --theme \"postmark\"",
-    "build:client:server": "yarn lint:styles && yarn prettier && yarn build:prod && ng run angular.io-example:server",
+    "prettier": "prettier --config '. prettierrc.json' --write 'apps/*.ts' --write 'apps/**/*.ts'",
+    "build:client:server": "npm run lint:styles && npm run prettier && npm run build:prod && ng run angular.io-example:server",
     "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
-    "build:ssr": "yarn lint:ci && yarn build:client:server && yarn webpack:server && node version.js",
+    "build:ssr": "npm run lint:ci && npm run build:client:server && npm run webpack:server && node version.js",
     "build:dev": "ng build",
     "build:prod": "ng build --prod",
     "serve": "ng serve",
@@ -45,9 +38,9 @@
   },
   "private": true,
   "lint-staged": {
-    "{src,e2e}/**/*.{ts,tsx}": [
-      "yarn lint:ci",
-      "yarn prettier",
+    "{apps,libs}/**/*.{ts,json,md,scss}": [
+      "npm run affected:lint  -- --uncommitted --fix --parallel",
+      "npm run format:write -- --uncommitted",
       "git add"
     ]
   },
