--- a/angular.json
+++ b/angular.json
@@ -3,27 +3,29 @@
   "version": 1,
   "newProjectRoot": "",
   "projects": {
-    "tuskdesk": {
-      "root": "apps/tuskdesk/",
-      "sourceRoot": "apps/tuskdesk/src",
+    "landing-page": {
+      "root": "apps/landing-page/",
+      "sourceRoot": "apps/landing-page/src",
       "projectType": "application",
-      "prefix": "myorg",
+      "prefix": "marleyjs",
       "schematics": {},
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/apps/tuskdesk",
-            "index": "apps/tuskdesk/src/index.html",
-            "main": "apps/tuskdesk/src/main.ts",
-            "polyfills": "apps/tuskdesk/src/polyfills.ts",
-            "tsConfig": "apps/tuskdesk/tsconfig.app.json",
+            "outputPath": "dist/apps/landing-page",
+            "index": "apps/landing-page/src/index.html",
+            "main": "apps/landing-page/src/main.ts",
+            "polyfills": "apps/landing-page/src/polyfills.ts",
+            "tsConfig": "apps/landing-page/tsconfig.app.json",
             "assets": [
-              "apps/tuskdesk/src/favicon.ico",
-              "apps/tuskdesk/src/assets"
+              "apps/landing-page/src/favicon.ico",
+              "apps/landing-page/src/assets"
             ],
             "styles": [
-              "apps/tuskdesk/src/styles.css"
+              "./node_modules/normalize.css/normalize.css",
+              "./node_modules/bulma/css/bulma.css",
+              "apps/landing-page/src/styles.scss"
             ],
             "scripts": []
           },
@@ -31,8 +33,8 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "apps/tuskdesk/src/environments/environment.ts",
-                  "with": "apps/tuskdesk/src/environments/environment.prod.ts"
+                  "replace": "apps/landing-page/src/environments/environment.ts",
+                  "with": "apps/landing-page/src/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
@@ -50,35 +52,37 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "tuskdesk:build",
+            "browserTarget": "landing-page:build",
             "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
-              "browserTarget": "tuskdesk:build:production"
+              "browserTarget": "landing-page:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "tuskdesk:build"
+            "browserTarget": "landing-page:build"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "apps/tuskdesk/src/test.ts",
-            "polyfills": "apps/tuskdesk/src/polyfills.ts",
-            "tsConfig": "apps/tuskdesk/tsconfig.spec.json",
-            "karmaConfig": "apps/tuskdesk/karma.conf.js",
+            "main": "apps/landing-page/src/test.ts",
+            "polyfills": "apps/landing-page/src/polyfills.ts",
+            "tsConfig": "apps/landing-page/tsconfig.spec.json",
+            "karmaConfig": "apps/landing-page/karma.conf.js",
             "styles": [
-              "apps/tuskdesk/src/styles.css"
+              "./node_modules/normalize.css/normalize.css",
+              "./node_modules/bulma/css/bulma.css",
+              "apps/landing-page/src/styles.scss"
             ],
             "scripts": [],
             "assets": [
-              "apps/tuskdesk/src/favicon.ico",
-              "apps/tuskdesk/src/assets"
+              "apps/landing-page/src/favicon.ico",
+              "apps/landing-page/src/assets"
             ]
           }
         },
@@ -86,8 +90,8 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "apps/tuskdesk/tsconfig.app.json",
-              "apps/tuskdesk/tsconfig.spec.json"
+              "apps/landing-page/tsconfig.app.json",
+              "apps/landing-page/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -96,145 +100,26 @@
         }
       }
     },
-    "tuskdesk-e2e": {
-      "root": "apps/tuskdesk-e2e/",
+    "landing-page-e2e": {
+      "root": "apps/landing-page-e2e/",
       "projectType": "application",
       "architect": {
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "apps/tuskdesk-e2e/protractor.conf.js",
-            "devServerTarget": "tuskdesk:serve"
+            "protractorConfig": "apps/landing-page-e2e/protractor.conf.js",
+            "devServerTarget": "landing-page:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "tuskdesk:serve:production"
+              "devServerTarget": "landing-page:serve:production"
             }
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": "apps/tuskdesk-e2e/tsconfig.e2e.json",
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        }
-      }
-    },
-    "tuskdesk-admin": {
-      "root": "apps/tuskdesk-admin/",
-      "sourceRoot": "apps/tuskdesk-admin/src",
-      "projectType": "application",
-      "prefix": "myorg",
-      "schematics": {},
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:browser",
-          "options": {
-            "outputPath": "dist/apps/tuskdesk-admin",
-            "index": "apps/tuskdesk-admin/src/index.html",
-            "main": "apps/tuskdesk-admin/src/main.ts",
-            "polyfills": "apps/tuskdesk-admin/src/polyfills.ts",
-            "tsConfig": "apps/tuskdesk-admin/tsconfig.app.json",
-            "assets": [
-              "apps/tuskdesk-admin/src/favicon.ico",
-              "apps/tuskdesk-admin/src/assets"
-            ],
-            "styles": [
-              "apps/tuskdesk-admin/src/styles.css"
-            ],
-            "scripts": []
-          },
-          "configurations": {
-            "production": {
-              "fileReplacements": [
-                {
-                  "replace": "apps/tuskdesk-admin/src/environments/environment.ts",
-                  "with": "apps/tuskdesk-admin/src/environments/environment.prod.ts"
-                }
-              ],
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "extractCss": true,
-              "namedChunks": false,
-              "aot": true,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true
-            }
-          }
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "tuskdesk-admin:build"
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "tuskdesk-admin:build:production"
-            }
-          }
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "tuskdesk-admin:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "apps/tuskdesk-admin/src/test.ts",
-            "polyfills": "apps/tuskdesk-admin/src/polyfills.ts",
-            "tsConfig": "apps/tuskdesk-admin/tsconfig.spec.json",
-            "karmaConfig": "apps/tuskdesk-admin/karma.conf.js",
-            "styles": [
-              "apps/tuskdesk-admin/src/styles.css"
-            ],
-            "scripts": [],
-            "assets": [
-              "apps/tuskdesk-admin/src/favicon.ico",
-              "apps/tuskdesk-admin/src/assets"
-            ]
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "apps/tuskdesk-admin/tsconfig.app.json",
-              "apps/tuskdesk-admin/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        }
-      }
-    },
-    "tuskdesk-admin-e2e": {
-      "root": "apps/tuskdesk-admin-e2e/",
-      "projectType": "application",
-      "architect": {
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "apps/tuskdesk-admin-e2e/protractor.conf.js",
-            "devServerTarget": "tuskdesk-admin:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "tuskdesk-admin:serve:production"
-            }
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": "apps/tuskdesk-admin-e2e/tsconfig.e2e.json",
+            "tsConfig": "apps/landing-page-e2e/tsconfig.e2e.json",
             "exclude": [
               "**/node_modules/**"
             ]
@@ -246,7 +131,7 @@
       "root": "libs/ui-shell",
       "sourceRoot": "libs/ui-shell/src",
       "projectType": "library",
-      "prefix": "myorg",
+      "prefix": "marleyjs",
       "architect": {
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
@@ -328,7 +213,7 @@
       "root": "libs/data",
       "sourceRoot": "libs/data/src",
       "projectType": "library",
-      "prefix": "myorg",
+      "prefix": "marleyjs",
       "architect": {
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
@@ -360,5 +245,5 @@
     },
     "defaultCollection": "@nrwl/schematics"
   },
-  "defaultProject": "tuskdesk"
+  "defaultProject": "landing-page"
 }
