--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@ngrx/router-store": "6.1.0",
     "@ngrx/store": "6.1.0",
     "@nrwl/nx": "6.4.0",
+    "bulma": "^0.7.2",
     "core-js": "^2.5.4",
     "express": "4.16.3",
     "git-describe": "^4.0.3",
