modify npm scripts

--- a/package.json
+++ b/package.json
@@ -25,15 +25,12 @@
     "update:check": "ng update",
     "stylelint": "stylelint \"apps/**/*.scss\" && stylelint \"libs/**/*.scss\"",
     "lint:ci": "npm run stylelint && npm run lint",
-    "conventional-changelog": "conventional-changelog",
     "prettier": "prettier --config '. prettierrc.json' --write 'apps/*.ts' --write 'apps/**/*.ts'",
-    "build:client:server": "npm run lint:styles && npm run prettier && npm run build:prod && ng run angular.io-example:server",
-    "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
-    "build:ssr": "npm run lint:ci && npm run build:client:server && npm run webpack:server && node version.js",
     "build:dev": "ng build",
-    "build:prod": "ng build --prod",
+    "build:prod": "ng build --prod && npm run version",
     "serve": "ng serve",
     "serve:proxy": "ng serve --proxy-config proxy.conf.json",
+    "version": "node version.js",
     "precommit": "lint-staged"
   },
   "private": true,
