some bug fix with nest api

--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "marleyjs",
-  "version": "0.8.2",
+  "version": "0.9.0",
   "scripts": {
     "api:start": "ts-node -r tsconfig-paths/register apps/api/src/main.ts",
     "api:start:dev": "nodemon",
-    "api:prestart:prod": "rm -rf dist && tsc",
-    "api:start:prod": "node dist/apps/api/main.js",
-    "api:start:hmr": "node dist/apps/api/server",
+    "api:start:prod": "node apps/api/dist/server",
+    "api:start:hmr": "node apps/api/dist/server",
     "api:test:cov": "jest --coverage",
     "api:test:e2e": "jest --config ./apps/api/test/jest-e2e.json",
-    "api:webpack": "webpack --config apps/api/webpack.config.js",
+    "api:build": "webpack --config apps/api/webpack.config.js",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
