add htmlhint plugin

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "update:check": "ng update",
     "update:skip": "./node_modules/.bin/nx update:skip",
     "stylelint": "stylelint \"apps/**/*.scss\" && stylelint \"libs/**/*.scss\"",
-    "lint:ci": "npm run stylelint && npm run lint",
+    "htmlhint": "htmlhint \"apps/**/*.html\"",
+    "lint:ci": "npm run stylelint && npm run htmlhint && npm run lint",
     "prettier": "prettier --config '. prettierrc.json' --write 'apps/*.ts' --write 'apps/**/*.ts'",
     "build:dev": "ng build",
     "build:prod": "npm run prettier && ng build --prod",
@@ -96,6 +97,7 @@
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "describe": "^1.2.0",
+    "htmlhint": "^0.10.1",
     "jasmine-core": "~2.99.1",
     "jasmine-marbles": "0.3.1",
     "jasmine-spec-reporter": "~4.2.1",
